5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1582_1333.log
== SUBMITION (2019-04-02 15:47:38) 
-- CODE:
expressao = 30 3**2+8//3**2*10
print(21)
-- EXECUTION TIME:
0.17304
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 3**2+8//3**2*10
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:47:46) 
-- CODE:
expressao = 30- 3**2+8//3**2*10
print(21)
-- EXECUTION TIME:
0.16074
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
